route clear
